# Veritas-AI

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: docker_test.sh  validate_submission.sh
server/: Dockerfile  Vertias_AI_environment.py  __init__.py  app.py  requirements.txt
server/static/: index.html
veritas_env/: __init__.py  data_generator.py  environment.py  reward.py  tasks.py
